2006-04-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk-types.c (PyGdkWindow_PropertyGet): Change property size
	limit from 9999 to G_MAXLONG.  Thanks Wander Boessenkool.
	Fixes #327778.

	* pango.override (_wrap_pango_layout_line_index_to_x): First
	keyword name should be index, not x_pos, as pointed out by John
	Finlay.  Fixes #316581.

	* gtk/gtk.defs: Mark gtk_tree_row_reference_free as deprecated.
	Fixes #309811.

	* gtk/gtkcontainer.override
	(_wrap_gtk_container_class_list_child_properties): Deprecate in
	favour of gtk.Container.list_child_properties.
	(_wrap_gtk_container_list_child_properties): Add
	gtk.Container.list_child_properties as classmethod.
	(_wrap_gtk_container_class_install_child_property): Deprecate in
	favour of gtk.Container.install_child_property.
	(_wrap_gtk_container_install_child_property): Add
	gtk.Container.install_child_property as clasmethod.  Fixes #308394.

	* gtk/gtktreeview.override: Remove gtk_tree_view_get_visible_rect
	duplicate override.

	* gtk/gtk.override: Make the "new-constructor
	GTK_TYPE_MESSAGE_DIALOG" declaration conditional on gtk+ >= 2.9,
	to match the contents of the constructor.

2006-04-02  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.override (_wrap_gdk_draw_indexed_image):
	wrap, Fixes #333431 (Hamish Moffatt)
	* tests/test_gdk.py (GdkTest.testDrawIndexedImage): Add test

	* gtk/gtk.defs (spin): Set default value of increment to
	1, fixes #325452 (Sebastian Rittau)

	* pango.override:
	* tests/Makefile.am:
	* tests/test_pango.py:

	Set default markup accel marker to \x00, add tests,
	Fixes #329658 (Johan Svedberg)

2006-04-02  Ben Caradoc-Davies  <ben@wintersun.org>

	reviewed by: Johan

	* examples/pygtk-demo/demos/pixbufs.py: Remove
	discontinuous motion, fixes #327931

2006-04-02  Johan Dahlin  <johan@gnome.org>


	* gtk/gtkmodule.c (init_gtk): GDK_PARENT_RELATIVE constant

	* gtk/gtk-types.c (pygtk_style_helper_setitem): Add support for
	GDK_PARENT_RELATIVE in style pixmaps.
