@@ -1,3 +1,8 @@
+2006-04-02  Johan Dahlin  <johan@gnome.org>
+
+	* examples/gtk/widget.py: Remove tabs fixes #325320
+	(Dieter Verfaillie)
+
 2006-04-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gtk/gtk-types.c (PyGdkWindow_PropertyGet): Change property size
